<resources>
    <string name="app_name">BetterBetterCounter</string>
    <string name="name_cant_be_blank">Give the counter a name</string>
    <string name="already_exists">A counter with this name already exists</string>
    <string name="counter_name">Counter name</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="never">Never</string>
    <string name="add_counter">Add counter</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_counter">Edit counter</string>
    <string name="delete">Delete</string>
    <string name="delete_or_reset">Delete/Reset</string>
    <string name="interval_hour">Hourly</string>
    <string name="interval_day">Daily</string>
    <string name="interval_week">Weekly</string>
    <string name="interval_month">Monthly</string>
    <string name="interval_year">Yearly</string>
    <string name="interval_lifetime">Lifetime</string>
    <string name="time_ago_dhm">%1$dd %2$dh %3$dm ago</string>
    <string name="time_ago_hm">%1$dh %2$dm ago</string>
    <string name="time_ago_m">%1$dm ago</string>
    <string name="time_in_dhm">In %1$dd %2$dh %3$dm</string>
    <string name="time_in_hm">In %1$dh %2$dm</string>
    <string name="time_in_m">In %1$dm</string>
    <string name="just_now">Just now</string>
    <string name="goal_stats_averages">Goal reached: %1$s, lifetime: %2$s</string>
    <string name="goal_stats_lifetime_averages">Lifetime goal reached: %1$s</string>
    <string name="stats_averages">Avg: %1$s, lifetime: %2$s</string>
    <string name="stats_averages_multiline">Avg: %1$s\nLifetime: %2$s</string>
    <string name="stats_average_per_hour">%1$.2f times/hour</string>
    <string name="stats_average_every_hours">every %1$.2f hours</string>
    <string name="stats_average_per_day">%1$.2f times/day</string>
    <string name="stats_average_every_days">every %1$.2f days</string>
    <string name="stats_average_n_a">N/A</string>
    <string name="no_data">There are no entries in this period</string>
    <string name="tutorial_pickdate">Long press to pick the date</string>
    <string name="tutorial_change_graph_interval">Tap to change the time interval</string>
    <string name="tutorial_drag">Long press and drag to reorder</string>
    <string name="export_csv">Export data</string>
    <string name="import_csv">Import data</string>
    <string name="show_tutorial">Show tutorial</string>
    <string name="exported_n">Exported %1$d/%2$d counters</string>
    <string name="imported_n">Imported %1$d counters</string>
    <string name="import_error">Error: invalid file format</string>
    <string name="delete_confirmation">Are you sure you want to delete this counter?</string>
    <string name="decreased_entry">Decreased \'%1$s\'</string>
    <string name="undo">Undo</string>
    <string name="reset">Reset but keep</string>
    <plurals name="chart_title">
        <item quantity="one">%1$s (%2$d time)</item>
        <item quantity="other">%1$s (%2$d times)</item>
    </plurals>
    <string name="fake_example_title">Go jogging</string>
    <string name="app_widget_description">Add a counter to your home screen</string>
    <string name="no_counters">No counters exist: Create some first</string>
    <string name="color_hint">Color %1$d</string>
    <string name="display_interval">Interval to display</string>
    <string name="goal">Goal</string>
    <string name="settings">Settings</string>
    <string name="export_settings">Auto-export</string>
    <string name="auto_export">Auto-export when a counter changes</string>
    <string name="current_export_file">Counters will be exported automatically to %1$s</string>
    <string name="export_disabled">You can always export the counters manually from the main screen\'s context menu.</string>
    <string name="change_button">Change</string>
    <string name="export_error">Export failed</string>
    <string name="average_calculation_settings">Average Calculation</string>
    <string name="average_mode_first_to_last">Average between first entry and last entry</string>
    <string name="average_mode_first_to_now">Average between first entry and now</string>
    <string name="search">Filter</string>
    <string name="first_hour_of_day_title">First Hour of Day</string>
    <string name="first_hour_of_day_text">The day starts at %s</string>
    <string name="first_day_of_week_title">First Day of Week</string>
    <string name="first_day_of_week_text">The week starts on %s</string>
    <string name="sync_settings">WebDAV Sync</string>
    <string name="enable_webdav_sync">Sync data with a WebDAV server</string>
    <string name="webdav_url_hint">Server URL (e.g. https://192.168.1.10/dav)</string>
    <string name="webdav_username_hint">Username</string>
    <string name="webdav_password_hint">Password</string>
    <string name="webdav_remote_path_hint">Remote file (e.g. bettercounter.csv)</string>
    <string name="test_connection">Test connection</string>
    <string name="sync_test_success">Connection successful</string>
    <string name="sync_test_failed">Failed: %s</string>
    <string name="sync_error">Sync failed: %s</string>
    <string name="sync_retry">Retry</string>
</resources>
